Giraph Change Log

Release 1.1.0 - unreleased
  GIRAPH-910: removing unnecessary boxing in some places in giraph-core (pavanka)  

  GIRAPH-908: support for partitioned input in giraph (pavanka)

  GIRAPH-907: refactor giraph code to support multiple implementations of vertexId data (pavanka)  

  GIRAPH-899: Remove hcatalog from hadoop_facebook profile (pavanka)

  GIRAPH-873: Specialized edge stores (pavanka)
 
  GIRAPH-898: Remove giraph-accumulo from Facebook profile (edunov via majakabiljo)

  GIRAPH-896: Fix memory leak in SuperstepMetricsRegistry (edunov via pavanka)  

  GIRAPH-897: Add an option to dump only live objects to JMap (edunov via pavanka)  

  GIRAPH-895: Trim the edges in Giraph (edunov via pavanka)

  GIRAPH-889: Update Yourkit Profiler (yhdong via pavanka)

  GIRAPH-891: Make MessageStoreFactory configurable (rohankarwa via majakabiljo)

  GIRAPH-825: Fix DiskBackedPartitionStore to work with current trunk (armax00 via claudio)

  GIRAPH-864: 'mvn clean test' fails for rexster (armax00 via claudio)

  GIRAPH-884: ByteArrayEdges.iterator() throws NPE when no edges are present
  (cmuchinsky via claudio)

  GIRAPH-872: Minor inconsistencies with netty handler logic after netty 4 upgrade
  (cmuchinsky via claudio)

  GIRAPH-871: Map task jvm never exits since netty 4 upgrade (cmuchinsky via claudio)

  GIRAPH-869: Log Vertex/Edge Count for All Workers (yhdong via majakabiljo)

  GIRAPH-868: Fix race condition with WorkerProgress (majakabiljo)

  GIRAPH-867: Fix comments in PageRankComputation (ssc)
  
  GIRAPH-866: Fix checkstyle error from GIRAPH-865 (majakabiljo)

  GIRAPH-865: Job client shouldn't crash when JobProgressTracker gets 
  exception (majakabiljo)

  GIRAPH-856: Log amount of free memory on the command line (majakabiljo)

  GIRAPH-860: Giraph jobs can hang forever if HDFS filestamps aren't 
  created (aching)

  GIRAPH-858: tests fail for hadoop_facebook because of dependency issues
  (pavanka via aching)
